# familiar

./: .gitignore  AuthKey_LTK6QL7C9P.p8  CHANGELOG.md  Cargo.toml  README.md  VERSION  project.yml
.github/workflows/: ci.yml
App/Sources/: AppModel.swift  KeychainStore.swift  PhoneWatchLink.swift  SensingCoordinator.swift  Views.swift
App/Support/: Info.plist
FamiliarMesh/: Package.swift
FamiliarMesh/Sources/FamiliarMesh/: Covenant.swift  Enrollment.swift  ObservationClient.swift
FamiliarMesh/Sources/familiar-observe/: main.swift
FamiliarMesh/Tests/FamiliarMeshTests/: CertConformanceTests.swift  EnvelopeTests.swift
Watch/Sources/: WatchApp.swift
Watch/Support/: Info.plist
archive/glass/src/: main.rs
archive/ios/: project.yml
archive/ios/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
archive/ios/App/Sources/: AppModel.swift  LocalReasoner.swift  SensingCoordinator.swift  VoiceSensing.swift
archive/ios/tools/: ExportOptions.plist  testflight.sh
archive/marble/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: daemon.rs  main.rs
crates/core-ffi/: Cargo.toml  build.rs
crates/core-ffi/src/: lib.rs
crates/cycle/: Cargo.toml
crates/cycle/src/: lib.rs
crates/exec/src/: lib.rs
crates/glass/: Cargo.toml
crates/glass/src/: main.rs  theme.rs
crates/hologram/: Cargo.toml
crates/hologram/src/: client.rs  glass.rs  hologram.wgsl  main.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: activity.rs  boundary.rs  candidate.rs  capabilities.rs  capacities.rs  corruption.rs  dialog.rs  goal.rs  guard.rs  humanity.rs  identity.rs  lib.rs  parameters.rs  presence.rs  question.rs  regression_guard.rs  request.rs  review.rs  score.rs  selection.rs  service.rs  store.rs  thread.rs  tool.rs  trial.rs  version.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/marble/src/: mac.rs  main.rs
crates/mesh/: Cargo.toml
crates/mesh/examples/: cert_vector.rs  enroll_sign.rs  sign_observe.rs
crates/mesh/src/: brief.rs  config.rs  enroll.rs  grants.rs  group.rs  lib.rs  members.rs  merge.rs  node.rs  observe.rs  transport.rs  worldview.rs
crates/mesh/tests/: two_instance.rs
crates/observatory/src/: main.rs
crates/reach/: Cargo.toml
crates/reach/src/: lib.rs
crates/scenario/: Cargo.toml
crates/scenario/src/: author.rs  campaign.rs  det.rs  evaluator.rs  evidence.rs  gate.rs  harness.rs  lib.rs  noise.rs  report.rs  scenario.rs  timeline.rs  validate.rs  world.rs
crates/scenario/tests/: author.rs  campaign.rs  lab.rs  validate.rs
crates/scenario/tests/golden/: authority-line-1.json  process-repair-1.json  resource-pressure-1.json  service-loop-1.json  variation-curriculum-1.json
crates/sense/: Cargo.toml
crates/sense/src/: lib.rs
crates/vision/: build.rs
crates/vision/eye/: familiar-eye.swift
crates/vision/src/: lib.rs
docs/: 00-overview.md  01-problem-statement.md  02-research-basis.md  03-system-architecture.md  05-validation-and-results.md  06-limitations.md  07-roadmap.md  ARCHITECTURE.md  DEVELOPMENT_LOG.md  HUMANITY.md  SCENARIO-FRAMEWORK-DESIGN-BRIEF.md  SOUL.md  SPEC.md  TODO-linux.md  UI-DESIGN-BRIEF.md  bias-and-limitations.md  boundaries.md  data-model.md  design-orientation-and-mesh.md  evaluation-plan.md  human-review-requirements.md  law-iii-responses.md  mesh.md  scenario-laboratory.md  storage.md
docs/decision-records/: 0002-telos-first-refounding.md  0005-human-owned-capability-boundary.md  0006-observatory-gui-egui.md  0007-holographic-wgpu-shell.md  0007-one-core-many-shells.md  0008-metal-sphere-web-console.md  0009-sovereign-mesh-transport.md  0010-scenario-laboratory.md  0011-scenario-engine.md  one-core-many-shells.md
familiar_data/: candidates.jsonl  last_answered.txt  last_theory.txt  loops.jsonl  observations.jsonl  patterns.jsonl  structure.fp  threads.jsonl  trials.jsonl
familiar_data/artifacts/: candidate-0005.sh  candidate-0006.sh
familiar_data/llm/: prompt.txt  response.json
ios/: .gitignore  README.md  TESTFLIGHT.md  project.yml
ios/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/App/Sources/: AppModel.swift  BackgroundSync.swift  EmbeddedCore.swift  EnrollSupport.swift  FaceSensing.swift  GlassConsole.swift  LocalReasoner.swift  NetworkDiscovery.swift  PhoneWatchLink.swift  QRKit.swift  SensingCoordinator.swift  SphereConsoleIOS.swift  Views.swift  VoiceSensing.swift
ios/App/Support/: Info.plist
ios/FamiliarCore/FamiliarCore.xcframework/: Info.plist
ios/FamiliarMesh/: Package.swift
ios/FamiliarMesh/Sources/FamiliarMesh/: Covenant.swift  Enrollment.swift  FamiliarConsole.swift  FamiliarSphere.swift  Hex.swift  Membership.swift  MeshTLS.swift  ObservationClient.swift  WorldviewClient.swift
ios/FamiliarMesh/Sources/familiar-observe/: main.swift
ios/FamiliarMesh/Tests/FamiliarMeshTests/: EnvelopeTests.swift
ios/MacApp/Resources/sphere/: index.html
ios/MacApp/Sources/: MacApp.swift  MacBoundary.swift  MacFaceSensing.swift  MacSensing.swift  MacSettingsView.swift  SphereWebView.swift
ios/MacApp/Support/: Info.plist
ios/Shared/: FamiliarUI.swift
ios/Watch/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Watch/Sources/: WatchApp.swift  WatchModel.swift  WatchSensing.swift
ios/Watch/Support/: Info.plist
ios/tools/: ExportOptions.plist  make-appicon.swift  testflight.sh
llm/: call_llm.sh  key.env.example
packaging/: README.md  build-app.sh  build-pkg.sh  entitlements.plist  io.river.familiar.discover.plist
packaging/scripts/: postinstall
scenarios/process-failures/: backup-permissions.json  backup-spaces.json
scenarios/resource-exhaustion/: cache-growth.json  log-growth.json
scenarios/unauthorized-shortcuts/: secret-shortcut.json  tempting-config.json
security/: privacy-review.md
tasks/: plan.md
tools/: build-core.sh  make-appicon.swift
tools/campaigns/: a9.json
vm/: README.md  create-famtalker01.sh  familiar-peer.service  io.river.famtalker01.plist  provision-guest.sh
vps/: README.md  provision-lighthouse.sh
(+6 files in other folders)
