# Substrate v2 — telos-first factory. See docs/SOUL.md and docs/ARCHITECTURE.md.
#
# A small workspace expressing the hybrid architecture: a thin, deterministic
# kernel library + a thin CLI shell. Behavior evolves in the periphery (generated
# artifacts / data / the LLM seam), so the compiled core changes rarely.
[workspace]
resolver = "2"
# The GUI surfaces live in `ios/` (FamiliarMac + the iOS/iPad/watch apps); this workspace is
# the daemon (crates/cli → `familiar`) and the kernel it runs. The retired egui-era consoles
# were removed 2026-07-24 — git history keeps them.
members = ["crates/kernel", "crates/cli", "crates/sense", "crates/cycle", "crates/llm", "crates/exec", "crates/vision", "crates/mesh", "crates/agent", "crates/reach"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ian Schlueter <ian@river.io>"]

# Dependencies are kept deliberately minimal — a small, legible trust surface is
# part of the Law III commitment (it cannot be turned against the served).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
familiar-kernel = { path = "crates/kernel" }
familiar-sense = { path = "crates/sense" }
familiar-vision = { path = "crates/vision" }
familiar-cycle = { path = "crates/cycle" }
familiar-llm = { path = "crates/llm" }
familiar-exec = { path = "crates/exec" }
familiar-mesh = { path = "crates/mesh" }
familiar-agent = { path = "crates/agent" }
familiar-reach = { path = "crates/reach" }
