[package]
name = "familiar-marble"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The marble — a menu-bar presence that opens the Glass (macOS accessory app)."

[[bin]]
name = "marble"
path = "src/main.rs"

# Native menu-bar deps are macOS-only (Cocoa NSStatusItem). On other platforms the
# binary compiles to a stub, so the ubuntu CI green bar stays unaffected.
[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.19"
winit = "0.30"
