[package]
name = "familiar-core-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "The familiar's core for embedding in device shells (UniFFI) — ADR-0009 Phase 0: a capable phone IS a full peer."

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "familiar_core"

[dependencies]
familiar-kernel.workspace = true
familiar-mesh.workspace = true
serde_json.workspace = true
uniffi = { version = "0.28", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
