[package]
name = "familiar-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Peer federation over the tailnet — cryptographically group-verified nodes exchange tools, patterns, and (opt-in) humans. The one place dependency-minimalism is relaxed (see lib.rs)."

[dependencies]
familiar-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
# The crypto floor: ed25519 node/group keys, SHA-256 fingerprints, OS randomness.
# These — plus the Phase-3 transport deps — are the deliberate, documented concession
# to the workspace's otherwise serde-only dependency discipline (see lib.rs doc-comment).
ed25519-dalek = "2"
sha2 = "0.10"
getrandom = "0.2"
# Phase-3 transport: native async HTTP over the tailnet. Heavy, but isolated to this crate
# and never inherited by kernel/cycle/cli (they call sync entry points only).
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
# Phase-1 transport security (ADR-0009): covenant-pinned TLS on the mesh port. rustls +
# a per-node persistent P-256 key (rcgen) — Apple clients can't handshake EdDSA certs,
# so the TLS key is separate from the ed25519 node key and pinned via the enrollment
# payload instead.
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
http-body-util = "0.1"
